k8s/prod/tunefy-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tunefy-app
  labels:
    name: tunefy-app
    env: prod
