k8s/prod/backend-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tunefy-backend-green
  namespace: default
  labels:
    app: tunefy-backend
    color: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tunefy-backend
      color: green
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: tunefy-backend
        color: green
        colorLive: "false"  # Green en standby
    spec:
      imagePullSecrets:
      - name: ecr-registry
      containers:
      - name: backend
        image: 038686090046.dkr.ecr.us-east-1.amazonaws.com/tunefy-backend-prod:16
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health
            port: 3001
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 3001
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 1
          failureThreshold: 3
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
