k8s/prod/backend-service-bluegreen.yaml
apiVersion: v1
kind: Service
metadata:
  name: tunefy-backend-service
  namespace: default
  labels:
    app: tunefy-backend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3001
    protocol: TCP
  selector:
    app: tunefy-backend
    colorLive: "true"  # Solo enruta tráfico a pods con colorLive=true
  sessionAffinity: None
